<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    android:layout_gravity="center_horizontal"

    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/gridItem_moviePoster"
        android:layout_width="165dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:padding="16dp"
        android:layout_margin="10dp"
        android:background="@android:color/holo_blue_light"
        app:srcCompat="@drawable/exorcist"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/gridItem_movieTitle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:text="@string/movieTitle"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/gridItem_id"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:text="@string/no_0"
        android:textColor="@android:color/black"
        android:textSize="16sp" />


</LinearLayout>